Implementação de Filtro

--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -12,6 +12,8 @@
     border-radius: 5px;
     -webkit-transition: all 150ms linear 0s;
     transition: all 150ms linear 0s;
+    margin: 0 auto;
+    justify-content: center;
   }
   
   .button:hover {
