--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,519 @@
-.flexCenter,#form,header .container{display:flex;align-items:center;justify-content:center}*{-webkit-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0;outline:0}html{font-size:62.5%}html,body{height:100vh;font-family:"Source Sans Pro";text-rendering:optimizelegibility;-webkit-font-smoothing:antialiased}body{font-size:1.6rem}h2{color:#4b4b4b;font-size:3.6rem;line-height:4.6rem}h3{color:#4b4b4b;font-size:2.8rem;line-height:3.8rem}main{margin-bottom:80px}header{background-color:#cbbcff}header .container{justify-content:space-between;width:90%;max-width:980px;margin:auto}header .container img{width:150px;margin-left:20px;padding:15px 0}header .container ul{display:flex}header .container ul li{list-style:none}header .container ul a{text-decoration:none;color:#333;text-transform:uppercase;font-size:1.4rem;padding:2.4rem;transition:all 250ms linear 0s}header .container ul a:hover{background:rgba(255,255,255,.15)}.button{display:inline-block;font-size:1.6rem;font-weight:600;color:#333;background-color:#cbbcff;margin:15px 0px 0px;padding:12px 30px;text-decoration:none;border-radius:5px;-webkit-transition:all 150ms linear 0s;transition:all 150ms linear 0s;margin:0 auto;justify-content:center}.button:hover{opacity:.9}section.hero{margin:80px 0}section.hero .container{width:90%;max-width:980px;margin:auto;display:-webkit-box;display:-ms-flexbox;display:flex}section.hero p{color:#9a8ebf;font-size:1.8rem;line-height:3.2rem;margin:10px 0px 0px;text-align:center}.animate-grid{max-width:1170px;margin:0 auto}.cards{margin:0 auto;display:flex;flex-wrap:wrap}.card{width:25%;padding:10px;cursor:pointer;-webkit-transition:all .3s ease 0s;transition:all .3s ease 0s}@media(max-width: 768px){.card{width:50%}}@media(max-width: 500px){.card{width:100%}}.card:hover{-webkit-transform:translateY(-7px);transform:translateY(-7px)}.image{width:100%;padding-top:56.25%;overflow:hidden;position:relative}.image img{width:100%;position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%, -50%);transform:translate(-50%, -50%)}.content{padding:20px;min-height:120px;background-color:#cbbcff}.title{margin-bottom:20px}.info{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-item-align:end;align-self:end;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.price{margin-left:auto;padding:5px 20px;border-radius:20px;background-color:#a389ff}.modal-overlay{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;position:fixed;top:0;left:0;width:100%;height:100%;z-index:5;background-color:rgba(0,0,0,.6);opacity:0;visibility:hidden}.modal-overlay.active{opacity:1;visibility:visible}.modal{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;position:relative;background-color:#fff;width:95%;height:95%;margin:0 auto;padding:10px;border-radius:3px;-webkit-box-shadow:0 2px 10px rgba(0,0,0,.1);box-shadow:0 2px 10px rgba(0,0,0,.1);opacity:0;overflow-y:auto;visibility:hidden;-webkit-transition:all .6s cubic-bezier(0.55, 0, 0.1, 1);transition:all .6s cubic-bezier(0.55, 0, 0.1, 1);-webkit-transform:scale(1.2);transform:scale(1.2)}.modal .close-modal{position:absolute;cursor:pointer;top:5px;right:15px;opacity:0;-webkit-transition:opacity .6s cubic-bezier(0.55, 0, 0.1, 1),-webkit-transform .6s cubic-bezier(0.55, 0, 0.1, 1);transition:opacity .6s cubic-bezier(0.55, 0, 0.1, 1),-webkit-transform .6s cubic-bezier(0.55, 0, 0.1, 1);transition:opacity .6s cubic-bezier(0.55, 0, 0.1, 1),transform .6s cubic-bezier(0.55, 0, 0.1, 1);transition:opacity .6s cubic-bezier(0.55, 0, 0.1, 1),transform .6s cubic-bezier(0.55, 0, 0.1, 1),-webkit-transform .6s cubic-bezier(0.55, 0, 0.1, 1);-webkit-transition-delay:.3s;transition-delay:.3s}.modal .close-modal svg{width:18px;height:18px}.modal .modal-content{opacity:0;-webkit-transition:opacity .6s cubic-bezier(0.55, 0, 0.1, 1);transition:opacity .6s cubic-bezier(0.55, 0, 0.1, 1);-webkit-transition-delay:.3s;transition-delay:.3s}.modal.active{visibility:visible;opacity:1;-webkit-transform:scale(1);transform:scale(1)}.modal.active .modal-content{opacity:1}.modal.active .close-modal{-webkit-transform:translateY(10px);transform:translateY(10px);opacity:1}.video-background{position:fixed;top:0;right:0;bottom:0;left:0;z-index:-99;background-color:#fff}.video-foreground,.video-background iframe{position:absolute;top:50%;left:50%;width:100%;height:90%;-webkit-transform:translate(-50%, -50%);transform:translate(-50%, -50%)}#form{width:100%;background:#cbbcff;padding:80px 0;margin:0}#form form{width:90%;max-width:980px;background:#fff;padding:40px;-webkit-box-shadow:0px 2px 2px 2px rgba(0,0,0,.15),0px 10px 20px -10px rgba(0,0,0,.1);box-shadow:0px 2px 2px 2px rgba(0,0,0,.15),0px 10px 20px -10px rgba(0,0,0,.1)}#form h3{margin-bottom:30px}#form form label{display:none}.form-group{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row}.form-group label.right-inline{text-align:right;padding-right:8px;padding-left:10px;width:auto}.form-group .input-control{-webkit-box-flex:1;-ms-flex:1 1;flex:1 1;display:block;margin:-4px 8px 10px;padding:12px;font-size:1.6rem}#form .button{margin:20px 8px 10px}.categories{margin-top:60px}.categories ul{padding:0;margin:0;text-align:center}.categories ul li{display:inline-block;height:50px}.categories ul li a{border-radius:10px;font-size:16px;padding:10px 15px;text-decoration:none;color:#fff;background-color:#337ab7;margin:0 8px}.categories ul li a.active,.categories ul li a:focus,.categories ul li a:hover{background-color:#e4e4e4;color:#337ab7;font-weight:bold;transition:.3s}html{font-size:50%}@media(max-width: 630px){.hero .container{flex-direction:column;text-align:center}.hero .container img{order:-1}.form-group{display:block}}@media(max-width: 540px){nav{display:none}.one,.two,.three{background-color:#fff;height:5px;width:100%;margin:6px auto;transition-duration:.3s}.menu-toggle{width:40px;height:30px;margin-right:20px}.menu-section.on{position:absolute;top:0;left:0;width:100vw;height:100vh;background-color:#cbbcff;z-index:10;display:flex;justify-content:center;align-items:center}.menu-section.on nav{display:block}.menu-section.on .menu-toggle{position:absolute;right:25px;top:15px}.menu-section.on .menu-toggle .one{transform:rotate(45deg) translate(7px, 7px)}.menu-section.on .menu-toggle .two{opacity:0}.menu-section.on .menu-toggle .three{transform:rotate(-45deg) translate(8px, -9px)}.menu-section.on nav ul{text-align:center;display:block}.menu-section.on nav ul a{transition-duration:.5s;font-size:3rem;line-height:4rem;display:block}}@media(max-width: 320px){#form h3{font-size:2rem}}/*# sourceMappingURL=main.css.map */
+@charset "UTF-8";
+.flexCenter, #form, header .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+}
+
+html {
+  /* a cada 1rem será considera 10px */
+  font-size: 62.5%;
+}
+
+html,
+body {
+  height: 100vh;
+  font-family: "Source Sans Pro";
+  text-rendering: optimizelegibility;
+  -webkit-font-smoothing: antialiased;
+}
+
+body {
+  font-size: 1.6rem;
+}
+
+h2 {
+  color: #4b4b4b;
+  font-size: 3.6rem;
+  line-height: 4.6rem;
+}
+
+h3 {
+  color: #4b4b4b;
+  font-size: 2.8rem;
+  line-height: 3.8rem;
+}
+
+/*=============== 
+MAIN
+==================*/
+main {
+  margin-bottom: 80px;
+}
+
+header {
+  background-color: #cbbcff;
+}
+header .container {
+  justify-content: space-between;
+  width: 90%;
+  max-width: 980px;
+  margin: auto;
+}
+header .container img {
+  width: 150px;
+  margin-left: 20px;
+  padding: 15px 0;
+}
+header .container ul {
+  display: flex;
+}
+header .container ul li {
+  list-style: none;
+}
+header .container ul a {
+  text-decoration: none;
+  color: #333;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  padding: 2.4rem;
+  transition: all 250ms linear 0s;
+}
+header .container ul a:hover {
+  background: rgba(255, 255, 255, 0.15);
+}
+
+.button {
+  display: inline-block;
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: #333;
+  background-color: #cbbcff;
+  margin: 15px 0px 0px;
+  padding: 12px 30px;
+  text-decoration: none;
+  border-radius: 5px;
+  -webkit-transition: all 150ms linear 0s;
+  transition: all 150ms linear 0s;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.button:hover {
+  opacity: 0.9;
+}
+
+/*=============== 
+HERO
+==================*/
+section.hero {
+  margin: 60px 0;
+}
+section.hero .container {
+  width: 90%;
+  max-width: 980px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+section.hero .container p {
+  color: #9a8ebf;
+  font-size: 1.8rem;
+  line-height: 3.2rem;
+  margin: 10px 0px 0px;
+  text-align: center;
+}
+section.hero .container a.button {
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+/*=============== CARDS ==================*/
+.animate-grid {
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
+.cards {
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  width: 25%;
+  padding: 10px;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+@media (max-width: 768px) {
+  .card {
+    width: 50%;
+  }
+}
+@media (max-width: 500px) {
+  .card {
+    width: 100%;
+  }
+}
+.card:hover {
+  -webkit-transform: translateY(-7px);
+  transform: translateY(-7px);
+}
+
+.image {
+  width: 100%;
+  padding-top: 56.25%;
+  /* 16:9 */
+  overflow: hidden;
+  position: relative;
+}
+
+.image img {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.content {
+  padding: 20px;
+  min-height: 120px;
+  background-color: #cbbcff;
+}
+
+.title {
+  margin-bottom: 20px;
+}
+
+.info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: end;
+  align-self: end;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.price {
+  margin-left: auto;
+  padding: 5px 20px;
+  border-radius: 20px;
+  background-color: #a389ff;
+}
+
+/*=============== 
+MODAL
+==================*/
+.modal-overlay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: relative;
+  background-color: #fff;
+  width: 95%;
+  height: 95%;
+  margin: 0 auto;
+  padding: 10px;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  overflow-y: auto;
+  visibility: hidden;
+  -webkit-transition: all 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: all 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+.modal .close-modal {
+  position: absolute;
+  cursor: pointer;
+  top: 5px;
+  right: 15px;
+  opacity: 0;
+  -webkit-transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), -webkit-transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), -webkit-transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), transform 0.6s cubic-bezier(0.55, 0, 0.1, 1), -webkit-transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+
+.modal .close-modal svg {
+  width: 18px;
+  height: 18px;
+}
+
+.modal .modal-content {
+  opacity: 0;
+  -webkit-transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+
+.modal.active {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+}
+
+.modal.active .modal-content {
+  opacity: 1;
+}
+
+.modal.active .close-modal {
+  -webkit-transform: translateY(10px);
+  transform: translateY(10px);
+  opacity: 1;
+}
+
+.video-background {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -99;
+  background-color: white;
+}
+
+.video-foreground,
+.video-background iframe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 90%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+/*=============== 
+FORM
+==================*/
+#form {
+  width: 100%;
+  background: #cbbcff;
+  padding: 80px 0;
+  margin: 0;
+}
+
+#form form {
+  width: 90%;
+  max-width: 980px;
+  background: white;
+  padding: 40px;
+  -webkit-box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.15), 0px 10px 20px -10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.15), 0px 10px 20px -10px rgba(0, 0, 0, 0.1);
+}
+
+#form h3 {
+  margin-bottom: 30px;
+}
+
+#form form label {
+  display: none;
+}
+
+.form-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+}
+
+.form-group label.right-inline {
+  text-align: right;
+  padding-right: 8px;
+  padding-left: 10px;
+  width: auto;
+}
+
+.form-group .input-control {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1;
+  flex: 1 1;
+  display: block;
+  margin: -4px 8px 10px;
+  padding: 12px;
+  font-size: 1.6rem;
+}
+
+#form .button {
+  margin: 20px 8px 10px;
+}
+
+/*# sourceMappingURL=main.css.map */
+.categories {
+  margin-top: 60px;
+}
+
+.categories ul {
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+
+.categories ul li {
+  display: inline-block;
+  height: 50px;
+}
+
+.categories ul li a {
+  border-radius: 10px;
+  font-size: 16px;
+  padding: 10px 15px;
+  text-decoration: none;
+  color: #fff;
+  background-color: #337ab7;
+  margin: 0 8px;
+}
+
+.categories ul li a.active,
+.categories ul li a:focus,
+.categories ul li a:hover {
+  background-color: #e4e4e4;
+  color: #337ab7;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+/* media queries */
+html {
+  font-size: 50%;
+}
+
+@media (max-width: 630px) {
+  .hero .container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .hero .container img {
+    order: -1;
+  }
+
+  .form-group {
+    display: block;
+  }
+}
+@media (max-width: 540px) {
+  nav {
+    display: none;
+  }
+
+  .one,
+.two,
+.three {
+    background-color: #fff;
+    height: 5px;
+    width: 100%;
+    margin: 6px auto;
+    transition-duration: 0.3s;
+  }
+
+  .menu-toggle {
+    width: 40px;
+    height: 30px;
+    margin-right: 20px;
+  }
+
+  /* fullscreen */
+  .menu-section.on {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #cbbcff;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .menu-section.on nav {
+    display: block;
+  }
+
+  .menu-section.on .menu-toggle {
+    position: absolute;
+    right: 25px;
+    top: 15px;
+  }
+
+  .menu-section.on .menu-toggle .one {
+    transform: rotate(45deg) translate(7px, 7px);
+  }
+
+  .menu-section.on .menu-toggle .two {
+    opacity: 0;
+  }
+
+  .menu-section.on .menu-toggle .three {
+    transform: rotate(-45deg) translate(8px, -9px);
+  }
+
+  .menu-section.on nav ul {
+    text-align: center;
+    display: block;
+  }
+
+  .menu-section.on nav ul a {
+    transition-duration: 0.5s;
+    font-size: 3rem;
+    line-height: 4rem;
+    display: block;
+  }
+}
+@media (max-width: 320px) {
+  #form h3 {
+    font-size: 2rem;
+  }
+}
+
+/*# sourceMappingURL=main.css.map */
