--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -3,22 +3,28 @@
 HERO
 ==================*/
 section.hero {
-  margin: 80px 0;
+  margin: 60px 0;
+
+  .container {
+    width: 90%;
+    max-width: 980px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    p {
+      color: #9a8ebf;
+      font-size: 1.8rem;
+      line-height: 3.2rem;
+      margin: 10px 0px 0px;
+      text-align: center;
+    }
+  
+    a.button {
+      margin: 0 auto;
+      margin-top: 20px
+    }
+  } 
 }
 
-section.hero .container {
-  width: 90%;
-  max-width: 980px;
-  margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-section.hero p {
-  color: #9a8ebf;
-  font-size: 1.8rem;
-  line-height: 3.2rem;
-  margin: 10px 0px 0px;
-  text-align: center;
-}
